# Modular-Agentic-Reward-Engineering

./: .env.example  .gitignore  .tmp-agent-review-phase6.md  .tmp-agentic-adroit-final-summary.json  .tmp-agentic-adroit-multi-summary.json  .tmp-agentic-adroit-summary.json  .tmp-agentic-export-report.json  .tmp-agentic-objective.txt  .tmp-agentic-reward-probe.py  AGENTS.md  NEXT_AGENT_HANDOFF.md  README.md  pyproject.toml  pytest.ini  requirements-all.txt  requirements-dev.txt  requirements-runtime-gymnasium.txt  requirements-runtime-humanoid.txt  requirements-runtime-isaacgym.txt  requirements.txt  sitecustomize.py  usercustomize.py
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
configs/: example_experiment.yaml
configs/agentic/: README.md  adroit_hand_pen_openai_eurekaish.yaml  adroit_hand_pen_smoke.yaml  ant_main.yaml  humanoid_deep.yaml  humanoid_main.yaml  humanoid_main_openai.yaml  humanoid_main_openai_strict.yaml  humanoid_scout.yaml
configs/presets/: allegro_hand_ppo.yaml  cartpole_ppo.yaml  humanoid_ppo.yaml
docs/: chpc.md
reward_candidates/: cartpole_reward.py
runs/cartpole_baseline_dry_run/: launch.sh  manifest.json  result.json
runs/humanoid_ppo_baseline/: manifest.json
scripts/: train_ppo.py
specs/: agentic-improvement-backlog.md  agentic-tool-calling-plan.md  documentation-audit-2026-04-10.md
specs/001-iterative-reward-design/: data-model.md  phase4-handoff.md  phase5-handoff.md  phase6-handoff.md  phase7-handoff.md  phase7-pickup-handoff.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  verification-report.md
specs/002-autonomous-project-pass/: plan.md  spec.md
specs/003-real-experiment-readiness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  verification-report.md
specs/004-agent-tool-calling-architecture/: documentation-audit-2026-04-10.md  plan.md  quickstart.md  spec.md  tasks.md  verification-report.md
src/: sitecustomize.py
src/OtherResults/: allegroReward.py  cartPoleReward.py  humanoidReard.py
src/mare/: __init__.py  adapters.py  benchmark.py  cli.py  config.py  contracts.py  environment.py  environment_registry.py  execution.py  experiment.py  launch.py  launcher.py  manifest.py  orchestration.py  paths.py  project.py  registry.py  report.py  reward_candidate.py  reward_design.py  reward_patch.py  robustness.py  runtime.py  schema.py  sweep.py
src/mare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/rewardlab/: __init__.py
tests/: conftest.py  test_benchmark.py  test_execution.py  test_launcher.py  test_manifest_reward_candidate.py  test_orchestration.py  test_phase1.py  test_phase2.py  test_phase2_contract.py  test_report.py  test_reward_patch.py  test_rewards.py  test_robustness.py  test_sweep.py
tests/contract/: test_agent_cli.py  test_backend_adapters.py  test_feedback_cli.py  test_gymnasium_backend_runtime.py  test_isaacgym_backend_runtime.py  test_session_lifecycle_cli.py
tests/e2e/: test_gymnasium_actual_experiment.py  test_interrupt_best_candidate.py  test_isaac_actual_experiment.py  test_iteration_cycle_budget.py
tests/integration/: test_iteration_loop.py  (+13 more)
(+208 files in other folders)
