[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mare"
version = "0.1.0"
description = "Modular Agentic Reward Engineering research prototype"
requires-python = ">=3.9"

[project.scripts]
mare = "mare.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
