[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewardlab"
version = "0.1.0"
description = "LLM-guided reward function iteration toolkit for RL experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23,<5.0",
  "pydantic>=2.8,<3.0",
  "rich>=13.7,<14.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.112,<7.0",
  "mypy>=1.11,<2.0",
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-xdist>=3.6,<4.0",
  "ruff>=0.5.7,<0.8.0",
]
llm = ["openai>=1.52,<2.0"]
rl = ["gymnasium>=0.29,<1.0", "torch>=2.4,<3.0"]

[project.scripts]
rewardlab = "rewardlab.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "tools"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
packages = ["rewardlab"]
python_version = "3.12"
strict = true
warn_unused_configs = true
